@@ -46,19 +46,19 @@ our %S = (%S,
     'TV Special',
     'Music Video',
   ],
-  vn_relations    => [
-    # Name,           Reverse--
-    [ 'Sequel',              0 ],
-    [ 'Prequel',             1 ],
-    [ 'Same setting',        0 ],
-    [ 'Alternative version', 0 ],
-    [ 'Shares characters',   0 ],
-    [ 'Side story',          0 ],
-    [ 'Parent story',        1 ],
-    [ 'Same series',         0 ],
-    [ 'Fandisc',             0 ],
-    [ 'Original game',       1 ],
-  ],
+  vn_relations    => {
+  # id   => [ order, reverse ]
+    seq  => [ 0, 'preq' ],
+    preq => [ 1, 'seq'  ],
+    set  => [ 2, 'set'  ],
+    alt  => [ 3, 'alt'  ],
+    char => [ 4, 'char' ],
+    side => [ 5, 'par'  ],
+    par  => [ 6, 'side' ],
+    ser  => [ 7, 'ser'  ],
+    fan  => [ 8, 'orig' ],
+    orig => [ 9, 'fan'  ],
+  },
   age_ratings     => {
     -1 => [ 'Unknown' ],
     0  => [ 'All ages' ,'CERO A' ],
